[gd_scene load_steps=2 format=3 uid="uid://dbuhrvsfnim0t"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_306yt"]

[node name="killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_306yt")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="inmuneTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
